Vista de registro y modificación de css

--- a/registro.htm
+++ b/registro.htm
@@ -13,10 +13,12 @@
         <div name="logo" class="logo">
             <img src="logo.png" alt="logo" >
         </div>
-    <h2 class="inicio">Ya tienes cuenta?</h2>
-    <div class="botonesIni">
-        <a href="/**/"><img src="login.png" alt="login"></a><br><br>
-        <a href="/**/"><img src="signup.png" alt="signup"></a>
+    <h2 class="inicio">Unete a nosotros</h2>
+    <div class="botonesReg">
+        <h5>Registro con Google</h4>
+        <a href="/**/"><img src="googleReg.png" alt="RegistroGoogle"></a>
+        <h5>Registro con Facebook</h4>
+        <a href="/**/"><img src="FBReg.png" alt="RegistroFB"></a>
     </div>
     </div>
 </body>
