Vista de login y referencia mutua con registro

--- a/login.htm
+++ b/login.htm
@@ -13,14 +13,16 @@
         <div name="logo" class="logo">
             <img src="logo.png" alt="logo" >
         </div>
-    <h2 class="inicio">Unete a nosotros</h2>
+    <h2 class="inicio">Bienvenido de nuevo!</h2>
         <div class="botonesReg">
-            <h5>Registro con Google</h4>
-            <a href="/**/"><img src="googleReg.png" alt="RegistroGoogle"></a>
-            <h5>Registro con Facebook</h4>
-            <a href="/**/"><img src="FBReg.png" alt="RegistroFB"></a>
+            <h5>Inicio con Google</h4>
+            <a href="/**/"><img src="googleIni.png" alt="InicioGoogle"></a>
+            <h5>Inicio con Facebook</h4>
+            <a href="/**/"><img src="FBIni.png" alt="InicioFB"></a>
         </div>
-        <a class="RegtoIni" href="login.htm">Aún no te has registrado?</a>
+    <a class="RegtoIni" href="registro.htm">Aún no te has registrado?</a>
+
     </div>
+
 </body>
 </html>
