--- a/main.htm
+++ b/main.htm
@@ -11,7 +11,7 @@
 <body>
     <div class="app">
         <div class="logomini">
-            <img src="mini.png" alt="mini">
+            <img src="Colocar algo q funcione xd" alt="mini">
         </div>
         <div class="profnconf">
             <img src="conf.png" alt="conf">
