--- a/splash.htm
+++ b/splash.htm
@@ -10,7 +10,9 @@
 <body>
 <div class="app">
     <div name="logo" class="center">
-        <img src="logo.png" alt="logo" >
+        <img src="
+        https://cdn.discordapp.com/attachments/845745384953610240/1074132969322729522/1b8bdcf6004ed831ea6441af83a38a3e-signo-de-simbolo-de-medicina.png
+        " alt="logo" >
     </div>
     <h1 class="text">Cargando...</h1>
 </div>
