--- a/inicio.htm
+++ b/inicio.htm
@@ -11,12 +11,14 @@
 <body>
     <div class="app">
         <div name="logo" class="logo">
-            <img src="logo.png" alt="logo" >
+            <img src="
+            https://cdn.discordapp.com/attachments/845745384953610240/1074132969322729522/1b8bdcf6004ed831ea6441af83a38a3e-signo-de-simbolo-de-medicina.png
+            " alt="logo" >
         </div>
     <h2 class="inicio">Ya tienes cuenta?</h2>
     <div class="botonesIni">
-        <a href="/**/"><img src="login.png" alt="login"></a><br><br>
-        <a href="/**/"><img src="signup.png" alt="signup"></a>
+        <a href="login.htm"><img src="login.png" alt="login"></a><br><br>
+        <a href="registro.htm"><img src="signup.png" alt="signup"></a>
     </div>
     </div>
 </body>
