--- a/registro.htm
+++ b/registro.htm
@@ -11,7 +11,9 @@
 <body>
     <div class="app">
         <div name="logo" class="logo">
-            <img src="logo.png" alt="logo" >
+            <img src="
+            https://cdn.discordapp.com/attachments/845745384953610240/1074132969322729522/1b8bdcf6004ed831ea6441af83a38a3e-signo-de-simbolo-de-medicina.png
+            " alt="logo" >
         </div>
     <h2 class="inicio">Unete a nosotros</h2>
         <div class="botonesReg">
