vista para eliminar cita

--- a/main.htm
+++ b/main.htm
@@ -51,7 +51,7 @@
 
         <div class="btnCitas">
             <a href="aggCita.htm"><img src="aggCita.png" alt="Aggcita"></a>
-            <a href="quitCita.htm"><img src="quitCita.png" alt="quitcita"></a>
+            <a href="delcita.htm"><img src="delCita.png" alt="delcita"></a>
         </div>
 
         <div class="titulo2">
@@ -86,7 +86,7 @@
         </div>
         <div class="btnMeds">
             <a href="aggMed.htm"><img src="aggMed.png" alt="AggMed"></a>
-            <a href="quitMed.htm"><img src="quitMed.png" alt="quitMed"></a>
+            <a href="delmed.htm"><img src="delmed.png" alt="delmed"></a>
         </div>
     </div>
 </body>
