Asignacion de estilos de botones

--- a/aggcita.html
+++ b/aggcita.html
@@ -37,7 +37,7 @@
         </div>
 
         <div class="enviar">
-            <a href="main.htm"><img src="enviar.png" alt="enviar"></a>
+            <button class="btn_enviar">Enviar</button>
         </div>
 
 
