--- a/aggmed.html
+++ b/aggmed.html
@@ -39,7 +39,7 @@
         </div>
 
         <div class="enviar">
-            <a href="main.htm"><img src="enviar.png" alt="enviar"></a>
+            <button class="btn_enviar">Enviar</button>
         </div>
 
 
