imagenes añadidas y corrección de espacio

--- a/delcita.html
+++ b/delcita.html
@@ -22,17 +22,21 @@
 
         <div class="formulario">
             <br><br><br><br>
-            <img src="fdp.png" alt="fdp" width="80" height="80" >
-            <br><br><br><br>
+            <div class="foto">
+                <img src="https://i.pinimg.com/736x/65/3d/5c/653d5cf7171ab047937fa141b254c14a.jpg" alt="">
+            </div><br>
             <h2>Seleccione la cita que desea eliminar</h2>
-            <select name="citas">
-                <option value="cita1">Seleccione una cita</option>
-                <option value="cita1">cita 1</option>
-                <option value="cita2">cita 2</option>
-                <option value="cita3">cita 3</option>
-                <option value="cita4">cita 4</option>
-            </select>
-            <br><br><br><br>
+            <div class="seccion1">
+                <div class="caja">
+                    <select>
+                      <option selected value="cita1">Seleccione una cita</option>
+                      <option value="cita1">cita 1</option>
+                      <option value="cita2">cita 2</option>
+                      <option value="cita3">cita 3</option>
+                      <option value="cita4">cita 4</option>
+                    </select>
+                </div>
+            </div>
             <div class="titulo1">
                 <h2>Tus citas</h2>
             </div>
@@ -66,7 +70,7 @@
         </div>
 
         <div class="enviar">
-            <a href="main.htm"><img src="enviar.png" alt="enviar"></a>
+            <button class="btn_enviar">Eliminar</button>
         </div>
 
 
