--- a/delmed.html
+++ b/delmed.html
@@ -25,13 +25,17 @@
             <img src="fdp.png" alt="fdp" width="80" height="80" >
             <br><br><br><br>
             <h2>Seleccione el medicamento que desea eliminar</h2>
-            <select name="citas">
-                <option value="Seleccione">Seleccione un medicamento</option>
-                <option value="med1">Medicamento 1</option>
-                <option value="med2">Medicamento 2</option>
-                <option value="med3">Medicamento 3</option>
-                <option value="med4">Medicamento 4</option>
-            </select>
+            <div class="seccion1">
+                <div class="caja">
+                    <select>
+                        <option selected value="Seleccione">Seleccione un medicamento</option>
+                        <option value="med1">Medicamento 1</option>
+                        <option value="med2">Medicamento 2</option>
+                        <option value="med3">Medicamento 3</option>
+                        <option value="med4">Medicamento 4</option>
+                    </select>
+                </div>
+            </div>
             <br><br><br><br>
             <div class="titulo1">
                 <h2>Tus medicamentos</h2>
@@ -66,7 +70,7 @@
         </div>
 
         <div class="enviar">
-            <a href="main.htm"><img src="enviar.png" alt="enviar"></a>
+            <button class="btn_enviar">Eliminar</button>
         </div>
 
 
