--- a/inicio.html
+++ b/inicio.html
@@ -17,8 +17,8 @@
         </div>
     <h2 class="inicio">Ya tienes cuenta?</h2>
     <div class="botonesIni">
-        <a href="login.htm"><img src="login.png" alt="login"></a><br><br>
-        <a href="registro.htm"><img src="signup.png" alt="signup"></a>
+        <button class="btn_login">Login</button><br><br><br>
+        <button class="btn_register">Register</button>
     </div>
     </div>
 </body>
