--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
 
 </head>
 <body>
@@ -15,15 +16,17 @@
             https://cdn.discordapp.com/attachments/845745384953610240/1074132969322729522/1b8bdcf6004ed831ea6441af83a38a3e-signo-de-simbolo-de-medicina.png
             " alt="logo" >
         </div>
-    <h2 class="inicio">Bienvenido de nuevo!</h2>
-        <div class="botonesReg">
-            <h5>Inicio con Google</h4>
-            <a href="/**/"><img src="googleIni.png" alt="InicioGoogle"></a>
-            <h5>Inicio con Facebook</h4>
-            <a href="/**/"><img src="FBIni.png" alt="InicioFB"></a>
-        </div>
-    <a class="RegtoIni" href="registro.htm">Aún no te has registrado?</a>
+        <h2 class="inicio">Bienvenido de nuevo!</h2>
 
+        <button class="loginBtn loginBtn--google">
+            Login with Google
+          </button>
+        <button class="loginBtn loginBtn--facebook">
+            Login with Facebook
+          </button>
+          
+        <button class="registroIni">¿Aún no te has registrado?</button>
+        
     </div>
 
 </body>
