Testeo para agregar citas

--- a/main.html
+++ b/main.html
@@ -23,9 +23,7 @@
         </div>
 
         <div class="citas">
-            <table style="width:100%" class="tablaCitas">
-                <!--Aquí estuve intentando la lógica de agregar citas dinámicamente.
-                Para mayor información visitar https://codepen.io/Juan-Montoya-the-selector/pen/LYJRqzZ-->
+            <table style="width:100%" id="tablaCitas">
                 <tr>
                     <th style="width:70%">cita</th>
                     <th>Hora</th>
