Agregada la funcionalidad en medicamentos

--- a/main.html
+++ b/main.html
@@ -43,26 +43,10 @@
         </div>
 
         <div class="medicamentos">
-            <table style="width:100%">
+            <table style="width:100%" id="tablaMedicamentos">
                 <tr>
                     <th style="width:70%">Medicamento</th>
                     <th>Hora</th>
-                </tr>
-                <tr>
-                    <td>Medicamento 1</td>
-                    <td>00:00</td>
-                </tr>
-                <tr>
-                    <td>Medicamento 2</td>
-                    <td>00:00</td>
-                </tr>
-                <tr>
-                    <td>Medicamento 3</td>
-                    <td>00:00</td>
-                </tr>
-                <tr>
-                    <td>Medicamento 4</td>
-                    <td>00:00</td>
                 </tr>
                 
                 
