corrección de enlaces

--- a/main.html
+++ b/main.html
@@ -34,8 +34,8 @@
         </div>
 
         <div class="btnCitas">
-            <a href="aggCita.htm"><img src="aggCita.png" alt="Aggcita"></a>
-            <a href="delcita.htm"><img src="delCita.png" alt="delcita"></a>
+            <a href="aggCita.html"><img src="aggCita.png" alt="Aggcita"></a>
+            <a href="delcita.html"><img src="delCita.png" alt="delcita"></a>
         </div>
 
         <div class="titulo2">
@@ -53,8 +53,8 @@
             </table>
         </div>
         <div class="btnMeds">
-            <a href="aggMed.htm"><img src="aggMed.png" alt="AggMed"></a>
-            <a href="delmed.htm"><img src="delmed.png" alt="delmed"></a>
+            <a href="aggMed.html"><img src="aggMed.png" alt="AggMed"></a>
+            <a href="delmed.html"><img src="delmed.png" alt="delmed"></a>
         </div>
     </div>
     <div><script src="js/tablas.js"></script></div>
