--- a/delcita.html
+++ b/delcita.html
@@ -13,7 +13,7 @@
             <img class="logo" src="https://cdn.discordapp.com/attachments/845745384953610240/1074132969322729522/1b8bdcf6004ed831ea6441af83a38a3e-signo-de-simbolo-de-medicina.png" alt="">
         </div>
         <div class="btn_cerrar">
-            <a href="main.htm"><img src="https://media.discordapp.net/attachments/845745384953610240/1074125706096803961/image_1.png" alt="" height="42px" width="42px"></a>
+            <a href="main.html"><img src="https://media.discordapp.net/attachments/845745384953610240/1074125706096803961/image_1.png" alt="" height="42px" width="42px"></a>
         </div>
 
         <div class="titulo">
