agregacion de script de navegacion

--- a/login.html
+++ b/login.html
@@ -28,6 +28,6 @@
         <button class="registroIni">¿Aún no te has registrado?</button>
         
     </div>
-
+    <script src="js/navegacion.js"></script>
 </body>
 </html>
