--- a/main.html
+++ b/main.html
@@ -57,7 +57,9 @@
             <a href="delmed.html"><img src="delmed.png" alt="delmed"></a>
         </div>
     </div>
-    <div><script src="js/tablas.js"></script></div>
+    <div>
+    <script src="js/navegacion.js"></script>
+    <script src="js/tablas.js"></script></div>
     
 </body>
 </html>
