--- a/registro.html
+++ b/registro.html
@@ -24,5 +24,6 @@
         </div>
         <a class="RegtoIni" href="login.htm">Aún no te has registrado?</a>
     </div>
+    <script src="js/navegacion.js"></script>
 </body>
 </html>
