correccion boton cerrar

--- a/main.html
+++ b/main.html
@@ -14,8 +14,8 @@
             <img src="Colocar algo q funcione xd" alt="mini">
         </div>
         <div class="profnconf">
-            <img src="conf.png" alt="conf">
-            <img src="prof.png" alt="prof">
+            <img id="btn_Perfil" src="conf.png" alt="conf">
+            <img id="btn_config" src="prof.png" alt="prof">
         </div>
 
         <div class="titulo1">
@@ -34,8 +34,8 @@
         </div>
 
         <div class="btnCitas">
-            <a href="aggCita.html"><img src="aggCita.png" alt="Aggcita"></a>
-            <a href="delcita.html"><img src="delCita.png" alt="delcita"></a>
+            <a id="btn_aggCita"><img src="aggCita.png" alt="Aggcita"></a>
+            <a id="btn_delcita"><img src="delCita.png" alt="delcita"></a>
         </div>
 
         <div class="titulo2">
@@ -53,8 +53,8 @@
             </table>
         </div>
         <div class="btnMeds">
-            <a href="aggMed.html"><img src="aggMed.png" alt="AggMed"></a>
-            <a href="delmed.html"><img src="delmed.png" alt="delmed"></a>
+            <a id="btn_aggmed"><img src="aggMed.png" alt="AggMed"></a>
+            <a id="btn_delmed"><img src="delmed.png" alt="delmed"></a>
         </div>
     </div>
     <div>
