--- a/Configuracion.html
+++ b/Configuracion.html
@@ -13,8 +13,8 @@
         <div class="header-config">
             <img class="logo" src="https://cdn.discordapp.com/attachments/845745384953610240/1074132969322729522/1b8bdcf6004ed831ea6441af83a38a3e-signo-de-simbolo-de-medicina.png" alt="">
             <p>Configuración</p>
-            <button class="btn_cerrar"><img src="https://media.discordapp.net/attachments/845745384953610240/1074125706096803961/image_1.png" alt="" height="42px" width="42px"></button>
-        </div>
+            <input type="image" class="btn_cerrar" id="btn_main" src="https://media.discordapp.net/attachments/845745384953610240/1074125706096803961/image_1.png" alt="" height="42px" width="42px">
+             </div>
     <nav class="nav">
         <ul class="list">
             <li class="list__item list__item--click">
