--- a/Configuracion.html
+++ b/Configuracion.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/configuracion.css" type="text/css">
-    <script src="js/config.js"></script>
+    
     <title>configuracion</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
         <div class="header-config">
             <img class="logo" src="https://cdn.discordapp.com/attachments/845745384953610240/1074132969322729522/1b8bdcf6004ed831ea6441af83a38a3e-signo-de-simbolo-de-medicina.png" alt="">
             <p>Configuración</p>
-            <input type="image" class="btn_cerrar" id="btn_main" src="https://media.discordapp.net/attachments/845745384953610240/1074125706096803961/image_1.png" alt="" height="42px" width="42px">
+            <input type="image" class="btn_cerrar" id="btn_main" src="assets/volver.png" alt="" >
              </div>
     <nav class="nav">
         <ul class="list">
@@ -90,7 +90,7 @@
 
     </div>
 
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
     </div>
     <script src="js/navegacion.js"></script>
 </body>
