--- a/delmed.html
+++ b/delmed.html
@@ -12,7 +12,7 @@
         <div class="logomini">
             <img class="logo" src="https://cdn.discordapp.com/attachments/845745384953610240/1074132969322729522/1b8bdcf6004ed831ea6441af83a38a3e-signo-de-simbolo-de-medicina.png" alt="">
         </div>
-        <input type="image" class="btn_cerrar" id="btn_main" src="https://media.discordapp.net/attachments/845745384953610240/1074125706096803961/image_1.png" alt="" height="42px" width="42px">
+        <input type="image" class="btn_cerrar" id="btn_main" onclick="inicializar(event)" src="https://media.discordapp.net/attachments/845745384953610240/1074125706096803961/image_1.png" alt="" height="42px" width="42px">
         <div class="titulo">
             <h3>Eliminar medicamento</h3>
         </div>
