local storage almacenando

--- a/aggcita.html
+++ b/aggcita.html
@@ -21,26 +21,27 @@
 
         <div class="formulario">
             <h3>Tipo de cita</h3>
-            <input type="text">
+            <input type="text" id="tipoCita">
             <h3>Descripción de cita</h3>
-            <input type="text">
+            <input type="text" id="descripcion">
             <h3>Nombre del médico</h3>
-            <input type="text">
+            <input type="text" id="nomMedico">
             <h3>Tipo de médico</h3>
-            <input type="text">
+            <input type="text" id="tipoMedico">
             <h3>Hora  ---  Fecha</h3>
-            <input type="time">
-            <input type="date">
+            <input type="time" id="hora">
+            <input type="date" id="fecha">
             <h3>Lugar</h3>
-            <input type="text">           
+            <input type="text" id="lugar">           
         </div>
 
         <div class="enviar">
-            <button class="btn_enviar">Enviar</button>
+            <button class="btn_enviar" id="btn_enviar">Enviar</button>
         </div>
 
 
     </div>
+    <script src="js/tablas.js"></script>
     <script src="js/navegacion.js"></script>
 </body>
 </html>
