almacenamiento ordenado en local storage establecido

--- a/aggmed.html
+++ b/aggmed.html
@@ -38,12 +38,12 @@
         </div>
 
         <div class="enviar">
-            <button class="btn_enviar" id="btn_enviarmed">Enviar</button>
+            <button class="btn_enviar" id="btn_enviar">Enviar</button>
         </div>
 
 
     </div>
-    <script src="js/tablas.js"></script>
+    <script src="js/tablasmed.js"></script>
     <script src="js/navegacion.js"></script>
 </body>
 </html>
