tablas y funciones de agregar medicamento y citas funcionando

--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
         </div>
 
         <div id="div1">
-            <table border="1">
+            <table border="1" id="tablaCitas">
                <tr><th>Citas</th><th>Hora</th></tr>
            </table>
        </div>
@@ -63,8 +63,8 @@
         </div>
 
         <div id="div2">
-            <table border="1">
-               <tr><th>Medicamento</th><th>Hora</th></tr>
+            <table border="1" id="tablaMedicamentos">
+               <tr><th>Medicamento</th><th>Periodicidad</th></tr>
            </table>
        </div>
 
@@ -74,7 +74,7 @@
         </div>
     </div>
     
+    <script src="js/actualizar.js"></script>
     <script src="js/navegacion.js"></script>
-    <script src="js/tablas.js"></script>
 </body>
 </html>
