arreglo bug de ids

--- a/src/main.html
+++ b/src/main.html
@@ -25,7 +25,7 @@
 
         <div id="div1">
             <table border="1" id="tablaCitas">
-               <tr><th>#</th><th>Citas</th><th>Hora</th></tr>
+               <tr><th>id</th><th>Citas</th><th>Hora</th></tr>
            </table>
        </div>
 
@@ -40,7 +40,7 @@
 
         <div id="div2">
             <table border="1" id="tablaMedicamentos">
-               <tr><th>Medicamento</th><th>Periodicidad</th></tr>
+               <tr><th>id</th><th>Medicamento</th><th>Periodicidad</th></tr>
            </table>
        </div>
 
