--- a/src/delcita.html
+++ b/src/delcita.html
@@ -34,7 +34,7 @@
             </div>
             <div id="div1">
                 <table border=1 id="tablaCitas">
-                    <tr><th>#</th><th>cita</th><th>Hora</th></tr>
+                    <tr><th>id</th><th>cita</th><th>Hora</th></tr>
                 </table>
             </div>
 
