seccion eliminar cita hecho

--- a/src/delcita.html
+++ b/src/delcita.html
@@ -41,7 +41,7 @@
         </div>
 
         <div class="enviar">
-            <button class="btn_enviar">Eliminar</button>
+            <button class="btn_enviar" id="btn_eliminar" onclick="eliminar()">Eliminar</button>
         </div>
 
 
