seccion eliminar medicamento hecho

--- a/src/delcita.html
+++ b/src/delcita.html
@@ -25,7 +25,7 @@
             <div class="seccion1">
                 <div class="caja">
                     <select id="seccionesCitas">
-                      <option selected value="cita1">Seleccione una cita</option>
+                      <option selected>Seleccione una cita</option>
                     </select>
                 </div>
             </div>
