--- a/src/Configuracion.html
+++ b/src/Configuracion.html
@@ -13,7 +13,7 @@
         <div class="header-config">
             <img class="logo" src="https://cdn.discordapp.com/attachments/845745384953610240/1074132969322729522/1b8bdcf6004ed831ea6441af83a38a3e-signo-de-simbolo-de-medicina.png" alt="">
             <p>Configuración</p>
-            <input type="image" class="btn_cerrar" id="btn_index" onclick="inicializar(event)" src="assets/volver.png" alt="" >
+            <input type="image" class="btn_cerrar" id="btn_main" onclick="inicializar(event)" src="assets/volver.png" alt="" >
              </div>
     <nav class="nav">
         <ul class="list">
