--- a/src/Perfil.html
+++ b/src/Perfil.html
@@ -13,7 +13,7 @@
         <div class="header-perfil">
             <img class="logo" src="https://cdn.discordapp.com/attachments/845745384953610240/1074132969322729522/1b8bdcf6004ed831ea6441af83a38a3e-signo-de-simbolo-de-medicina.png" alt="">
             <p class="p1">Perfil</p>
-            <input type="image" class="btn_cerrar" id="btn_index" onclick="inicializar(event)" src="https://media.discordapp.net/attachments/845745384953610240/1074125706096803961/image_1.png" alt=""   >
+            <input type="image" class="btn_cerrar" id="btn_main" onclick="inicializar(event)" src="https://media.discordapp.net/attachments/845745384953610240/1074125706096803961/image_1.png" alt=""   >
         </div>
         <div class="foto">
             <img src="https://i.pinimg.com/736x/65/3d/5c/653d5cf7171ab047937fa141b254c14a.jpg" alt="">
