cambio de todas las tablas por gridlayouts

--- a/src/main.html
+++ b/src/main.html
@@ -24,9 +24,13 @@
         </div>
 
         <div id="div1">
-            <table border="1" id="tablaCitas">
-               <tr><th>id</th><th>Citas</th><th>Hora</th></tr>
-           </table>
+            <div id="contenedorcitas" class="contenedor">
+
+                <div class="in1" style="grid-area: 1 / 1 / 2 / 2;"> <h3>ID</h3> </div>
+                <div class="in2" style="grid-area: 1 / 2 / 2 / 3;"><h3>Cita</h3>  </div>
+                <div class="in3" style="grid-area: 1 / 3 / 2 / 4;"><h3>Hora</h3> </div>
+                
+                </div>              
        </div>
 
         <div class="btnCitas">
@@ -39,9 +43,13 @@
         </div>
 
         <div id="div2">
-            <table border="1" id="tablaMedicamentos">
-               <tr><th>id</th><th>Medicamento</th><th>Periodicidad</th></tr>
-           </table>
+            <div id="contenedorMedicamentos" class="contenedor">
+
+                <div class="in4" style="grid-area: 1 / 1 / 2 / 2;"> <h3>ID</h3> </div>
+                <div class="in5" style="grid-area: 1 / 2 / 2 / 3;"><h3>Medicamento</h3>  </div>
+                <div class="in6" style="grid-area: 1 / 3 / 2 / 4;"><h3>Hora</h3> </div>
+                
+                </div>        
        </div>
 
         <div class="btnMeds">
