--- a/src/Perfil.html
+++ b/src/Perfil.html
@@ -82,9 +82,14 @@
             <button class="btn_añadirP" id="btn_añadir" onclick="enviarPat()">Añadir</button>
             <br><br>
             <div id="div1">
-                <table border=1 id="tablaPato">
-                    <tr><th>id</th><th>patologia</th></tr>
-                </table>
+                <div id="contenedorPato" class="contenedor">
+  
+                    <div class="in1" style="grid-area: 1 / 1 / 2 / 2;"> <h3>ID</h3></div>
+                    <div class="in2" style="grid-area: 1 / 2 / 2 / 3;"><h3>patología</h3> </div>
+                    <div class="in3" style="grid-area: 1 / 3 / 2 / 4;"> </div>
+                    
+                    </div>  
+                  
             </div>
         </div>
     </div>
