--- a/src/delcita.html
+++ b/src/delcita.html
@@ -33,9 +33,13 @@
                 <h2>Tus citas</h2>
             </div>
             <div id="div1">
-                <table border=1 id="tablaCitas">
-                    <tr><th>id</th><th>cita</th><th>Hora</th></tr>
-                </table>
+                <div id="contenedorcitas" class="contenedor">
+
+                    <div class="in1" style="grid-area: 1 / 1 / 2 / 2;"> <h3>ID</h3> </div>
+                    <div class="in2" style="grid-area: 1 / 2 / 2 / 3;"><h3>Cita</h3>  </div>
+                    <div class="in3" style="grid-area: 1 / 3 / 2 / 4;"><h3>Hora</h3> </div>
+                    
+                    </div>   
             </div>
 
         </div>
