--- a/src/delmed.html
+++ b/src/delmed.html
@@ -34,9 +34,14 @@
                 <h2>Tus medicamentos</h2>
             </div>
             <div id="div1">
-                <table border=1 id="tablaMed">
-                    <tr><th>id</th><th>cita</th><th>Hora</th></tr>
-                </table>
+                <div id="contenedorMedicamentos" class="contenedor">
+
+                    <div class="in4" style="grid-area: 1 / 1 / 2 / 2;"> <h3>ID</h3> </div>
+                    <div class="in5" style="grid-area: 1 / 2 / 2 / 3;"><h3>Medicamento</h3>  </div>
+                    <div class="in6" style="grid-area: 1 / 3 / 2 / 4;"><h3>Hora</h3> </div>
+                    
+                    </div>        
+           </div>
             </div>
 
         </div>
