modificacion agregar cita y main

--- a/src/aggmed.html
+++ b/src/aggmed.html
@@ -21,7 +21,39 @@
         <div class="formulario">
             <br><br>
             <h3>Nombre de medicamento</h3>
-            <input type="text" id="nomMed">
+            <input type="text" id="tipoMedicamento" list="opciones-medicamento">
+            <datalist id="opciones-medicamento">
+                <option value="Paracetamol">
+                <option value="Ibuprofeno">
+                <option value="Aspirina">
+                <option value="Dipirona">
+                <option value="Omeprazol">
+                <option value="Metformina">
+                <option value="Insulina">
+                <option value="Simvastatina">
+                <option value="Losartán">
+                <option value="Atorvastatina">
+                <option value="Hidroclorotiazida">
+                <option value="Enalapril">
+                <option value="Citalopram">
+                <option value="Sertralina">
+                <option value="Lorazepam">
+                <option value="Diazepam">
+                <option value="Clonazepam">
+                <option value="Metoclopramida">
+                <option value="Ranitidina">
+                <option value="Prednisona">
+                <option value="Codeína">
+                <option value="Tramadol">
+                <option value="Mefenámico">
+                <option value="Diclofenaco">
+                <option value="Paroxetina">
+                <option value="Furosemida">
+                <option value="Levotiroxina">
+                <option value="Warfarina">
+                <option value="Fenitoina">
+                <option value="Carbamazepina">
+            </datalist>
             <h3>Periodicidad</h3>
             <p>Cantidad:</p>
             <input type="number" id="cantidad">
