--- a/src/aggcita.html
+++ b/src/aggcita.html
@@ -21,13 +21,134 @@
 
         <div class="formulario">
             <h3>Tipo de cita</h3>
-            <input type="text" id="tipoCita">
+            <input type="text" id="tipoCita" list="opciones-consultas">
+            <datalist id="opciones-consultas">
+                <option value="Consulta de atención primaria">
+                    <option value="Consulta de especialistas"> 
+                    <option value="Consulta de urgencia"> 
+                    <option value="Consulta de seguimiento"> 
+                    <option value="Consulta de telemedicina"> 
+                    <option value="Consulta de bienestar"> 
+                    <option value="Consulta preoperatoria">
+                    <option value="Consulta postoperatoria">
+                    <option value="Consulta prenatal">
+                    <option value="Consulta ginecológica">
+                    <option value="Consulta de planificación familiar">
+                    <option value="Consulta de infertilidad"> 
+                    <option value="Consulta de psicología clínica">
+                    <option value="Consulta de psiquiatría"> 
+                    <option value="Consulta de nutrición"> 
+                    <option value="Consulta de fisioterapia"> 
+                    <option value="Consulta de rehabilitación"> 
+                    <option value="Consulta de terapia ocupacional">
+                    <option value="Consulta de ortopedia"> 
+                    <option value="Consulta de oftalmología"> 
+                    <option value="Consulta de otorrinolaringología"> 
+                    <option value="Consulta de neurología"> 
+                    <option value="Consulta de endocrinología"> 
+                    <option value="Consulta de cardiología"> 
+                    <option value="Consulta de neumología"> 
+                    <option value="Consulta de gastroenterología"> 
+                    <option value="Consulta de dermatología"> 
+                    <option value="Consulta de alergología"> 
+                    <option value="Consulta de medicina deportiva">  
+                    <option value="Consulta de medicina estética">  
+                    <option value="Consulta de pediatría"> 
+                    <option value="Consulta de geriatría"> 
+                    <option value="Consulta de odontología"> 
+                    <option value="Consulta de periodoncia"> 
+                    <option value="Consulta de endodoncia"> 
+                    <option value="Consulta de cirugía maxilofacial">  
+                    <option value="Consulta de ortodoncia"> 
+                    <option value="Consulta de odontopediatría"> 
+                    <option value="Consulta de implantología"> 
+                    <option value="Consulta de medicina interna">  
+                    <option value="Consulta de urología"> 
+                    <option value="Consulta de proctología"> 
+                    <option value="Consulta de oncología pediátrica">  
+                    <option value="Consulta de hematología"> 
+                    <option value="Consulta de genética médica">  
+                    <option value="Consulta de medicina del sueño">   
+                    <option value="Consulta de medicina de familia y comunitaria">   
+                    <option value="Consulta de medicina intensiva">  
+                    <option value="Consulta de enfermedades infecciosas">  
+                    <option value="Consulta de medicina del trabajo">  
+                    <option value="Consulta de medicina de urgencias">  
+                    <option value="Consulta de psicología infantil">  
+                    <option value="Consulta de terapia de pareja">   
+                    <option value="Consulta de terapia sexual">  
+                    <option value="Consulta de logopedia"> 
+                    <option value="Consulta de terapia ocupacional pediátrica">  
+                    <option value="Consulta de terapia respiratoria">  
+                    <option value="Consulta de terapia del lenguaje">   
+                    <option value="Consulta de terapia de la mano">   
+                    <option value="Consulta de terapia cognitivo -conductual">  
+                    <option value="Consulta de terapia familiar">  
+                    <option value="Consulta de terapia gestalt">  
+                    <option value="Consulta de acupuntura"> 
+                    <option value="Consulta de quiropráctica"> 
+                    <option value="Consulta de osteopatía"> 
+                    <option value="Consulta de homeopatía"> 
+                    <option value="Consulta de naturopatía"> 
+                    <option value="Consulta de quiromasaje"> 
+                    <option value="Consulta de podología"> 
+                    <option value="Consulta de fisioterapia respiratoria">  
+            </datalist>
             <h3>Descripción de cita</h3>
             <input type="text" id="descripcion">
             <h3>Nombre del médico</h3>
             <input type="text" id="nomMedico">
             <h3>Tipo de médico</h3>
-            <input type="text" id="tipoMedico">
+            
+            <input type="text" id="tipoMedico" list="opciones-medicos">
+            <datalist id="opciones-medicos">
+                <option value= "Médico de familia">
+                <option value= "Médico general">
+                <option value= "Médico de cabecera">
+                <option value= "Cardiólogo">
+                <option value= "Dermatólogo">
+                <option value= "Oftalmólogo">
+                <option value= "Oncólogo">
+                <option value= "Médico de urgencias">
+                <option value= "Médico de emergencias">
+                <option value= "Médico de guardia">
+                <option value= "Médico especialista que está tratando al paciente">
+                <option value= "Médico especialista que realiza consultas a distancia">
+                <option value= "Médico especialista en medicina preventiva">
+                <option value= "Médico cirujano">
+                <option value= "Anestesiólogo">
+                <option value= "Ginecólogo obstetra">
+                <option value= "Matrona">
+                <option value= "Especialista en planificación familiar">
+                <option value= "Especialista en medicina reproductiva">
+                <option value= "Psiquiatra">
+                <option value= "Nutricionista">
+                <option value= "Fisioterapeuta">
+                <option value= "Médico rehabilitador">
+                <option value= "Terapeuta ocupacional">
+                <option value= "Ortopedista">
+                <option value= "Neurólogo">
+                <option value= "Endocrinólogo">
+                <option value= "Cardiólogo">
+                <option value= "Neumólogo">
+                <option value= "Gastroenterólogo">
+                <option value= "Dermatólogo">
+                <option value= "Alergólogo">
+                <option value= "Médico deportólogo">
+                <option value= "Médico estético">
+                <option value= "Hematólogo">
+                <option value= "Infectólogo">
+                <option value= "Nefrólogo">
+                <option value= "Otorrinolaringólogo">
+                <option value= "Pediatra">
+                <option value= "Radiólogo">
+                <option value= "Médico forense">
+                <option value= "Médico de medicina del trabajo">
+                <option value= "Médico de atención domiciliaria">
+                <option value= "Médico de cuidados paliativos">
+            </datalist>
+
+
             <h3>Hora  ---  Fecha</h3>
             <input type="time" id="hora">
             <input type="date" id="fecha">
