animacion splah  y organizacion de tablas a grid

--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="src/js/flujo.js"></script>
+    <link rel="stylesheet" href="/src/css/animation.css">
 </head>
 <body>
-    
+    <div class="app">
+        <div id="preloader_1">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span id="preloader-end"></span>
+            <span></span>
+            <span></span>
+        </div>
+    </div>
+    <script src="/src/js/flujo.js"></script>
 </body>
 </html>
