--- a/src/delcita.html
+++ b/src/delcita.html
@@ -34,12 +34,8 @@
             </div>
             <div id="div1">
                 <div id="contenedorcitas" class="contenedor">
-
-                    <div class="in1" style="grid-area: 1 / 1 / 2 / 2;"> <h3>ID</h3> </div>
-                    <div class="in2" style="grid-area: 1 / 2 / 2 / 3;"><h3>Cita</h3>  </div>
-                    <div class="in3" style="grid-area: 1 / 3 / 2 / 4;"><h3>Hora</h3> </div>
-                    
-                    </div>   
+                    <div class="in1" style="grid-area: 1 / 1 / 2 / 2;"> <h3>ID</h3> </div><div class="in2" style="grid-area: 1 / 2 / 2 / 3;"><h3>Cita</h3>  </div><div class="in3" style="grid-area: 1 / 3 / 2 / 4;"><h3>Hora</h3> </div>
+                </div>   
             </div>
 
         </div>
