--- a/src/delmed.html
+++ b/src/delmed.html
@@ -35,15 +35,11 @@
             </div>
             <div id="div1">
                 <div id="contenedorMedicamentos" class="contenedor">
-
-                    <div class="in4" style="grid-area: 1 / 1 / 2 / 2;"> <h3>ID</h3> </div>
-                    <div class="in5" style="grid-area: 1 / 2 / 2 / 3;"><h3>Medicamento</h3>  </div>
-                    <div class="in6" style="grid-area: 1 / 3 / 2 / 4;"><h3>Hora</h3> </div>
-                    
-                    </div>        
+                    <div class="in1" style="grid-area: 1 / 1 / 2 / 2;"> <h3>ID</h3></div>
+                    <div class="in2" style="grid-area: 1 / 2 / 2 / 3;"><h3>Medicamento</h3></div>
+                    <div class="in3" style="grid-area: 1 / 3 / 2 / 4;"><h3>Periodicidad</h3> </div>
+                </div>        
            </div>
-            </div>
-
         </div>
 
         <div class="enviar">
