--- a/src/main.html
+++ b/src/main.html
@@ -42,12 +42,10 @@
 
         <div id="div2">
             <div id="contenedorMedicamentos" class="contenedor">
-
-                <div class="in1" style="grid-area: 1 / 1 / 2 / 2;"> <h3>ID</h3> </div>
-                <div class="in2" style="grid-area: 1 / 2 / 2 / 3;"><h3>Medicamento</h3>  </div>
-                <div class="in3" style="grid-area: 1 / 3 / 2 / 4;"><h3>Hora</h3> </div>
-                
-                </div>        
+                <div class="in1" style="grid-area: 1 / 1 / 2 / 2;"> <h3>ID</h3></div>
+                <div class="in2" style="grid-area: 1 / 2 / 2 / 3;"><h3>Medicamento</h3></div>
+                <div class="in3" style="grid-area: 1 / 3 / 2 / 4;"><h3>Periodicidad</h3> </div>
+            </div>        
        </div>
 
         <div class="btnMeds">
