--- a/src/Perfil.html
+++ b/src/Perfil.html
@@ -83,8 +83,9 @@
             <br><br>
             <div id="div1">
                 <div id="contenedorPato" class="contenedor">
-                    <div class="in1" style="grid-area: 1 / 1 / 2 / 2;"> <h3>ID</h3></div>
-                    <div class="in2" style="grid-area: 1 / 2 / 2 / 3;"><h3>patología</h3> </div>
+                    <div class="in1" style="grid-area: 1 / 1 / 2 / 2;"> <h3>Id</h3></div>
+                    <div class="in2" style="grid-area: 1 / 2 / 2 / 3;"><h3>Patología</h3></div>
+                    <div class="in3" style="grid-area: 1 / 3 / 2 / 4;"><h3>Descripcion</h3> </div>
                 </div>  
                   
             </div>
