commit de prueba de splash 2

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="app">
+        <h1>ander</h1>
         <!--
         <div id="preloader_1">
             <span></span>
