--- a/src/splash.html
+++ b/src/splash.html
@@ -10,15 +10,7 @@
 </head>
 <body>
     <div class="app">
-        <div id="preloader_1">
-            <span></span>
-            <span></span>
-            <span></span>
-            <span id="preloader-end"></span>
-            <span></span>
-            <span></span>
-        </div>
+        <h1>hola</h1>
     </div>
-    <script src="/src/js/splash.js"></script>
 </body>
 </html>
