--- a/src/splash.html
+++ b/src/splash.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Splash</title>
-    <link rel="stylesheet" href="css/animation.css">
+    <link rel="stylesheet" href="css/main.css">
 
 </head>
 <body>
     <div class="app">
-        <h1>hola</h1>
+        <p>Hola</p>
     </div>
 </body>
 </html>
