--- a/src/splash.html
+++ b/src/splash.html
@@ -4,12 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/animation.css">
+    <link rel="stylesheet" href="css/main.css">
     <title>Splash</title>
 
 </head>
 <body>
     <div class="app">
+        <div id="preloader_1">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span id="preloader-end"></span>
+        <span></span>
+        <span></span>
+    </div>
     </div>
 </body>
 </html>
